--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </a>
         </div>
            
-        <div class="intro-text left-0 text-center bg-faded p-2 rounded">
+        <div class="intro-text left-0 text-center bg-faded p-2 py-4 rounded">
           <h3 class="section-heading mb-4">
             <span class="section-heading-upper">Welcome</span>
             <span class="section-heading-lower">Where Quality Talks</span>
