mod living room tiles

--- a/gallery.html
+++ b/gallery.html
@@ -260,10 +260,10 @@
             <li data-target="#carouselExampleIndicators2" data-slide-to="8"></li>
           </ol>
           <div class="carousel-inner gallery">
-            <div class="carousel-item active">
+            <!-- <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/Ash-White-Living-Room-Wall.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
+            </div> -->
+            <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/8.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
