--- a/gallery.html
+++ b/gallery.html
@@ -257,35 +257,35 @@
             <li data-target="#carouselExampleIndicators2" data-slide-to="5"></li>
             <li data-target="#carouselExampleIndicators2" data-slide-to="6"></li>
             <li data-target="#carouselExampleIndicators2" data-slide-to="7"></li>
-            <li data-target="#carouselExampleIndicators2" data-slide-to="8"></li>
+            <!-- <li data-target="#carouselExampleIndicators2" data-slide-to="8"></li> -->
           </ol>
           <div class="carousel-inner gallery">
             <!-- <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/Ash-White-Living-Room-Wall.jpg" alt="First slide">
             </div> -->
             <div class="carousel-item ">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/8.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/8.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/19.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/19.jpg" alt="Second slide">
             </div>
             <div class="carousel-item active">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/new3.jpg" alt="Fourth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/new3.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/15.jpg" alt="Fifth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/15.jpg" alt="Fourth slide">
             </div>            
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/image3.jpg" alt="Sixth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/image3.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/new5.jpg" alt="Seventh slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/new5.jpg" alt="Sixth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/1.jpg" alt="Eighth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/1.jpg" alt="Seventh slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/11.jpg" alt="Nineth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/11.jpg" alt="Eighth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
