add pwa manifest

--- a/about.html
+++ b/about.html
@@ -5,17 +5,31 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Soababio Tiling Ltd - Where Quality Talks. We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!">
+  <meta name="description"
+    content="Soababio Tiling Ltd - Where Quality Talks. We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!">
   <meta name="author" content="Soababio TIling Ltd">
 
   <title>Soababio Tiling Ltd</title>
-  <link rel="icon" href="img/soababiotiling/favicon.png" sizes="16x16" type="image/png">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+  <link rel="manifest" href="/img/icons/site.webmanifest">
+  <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#00aba9">
+  <link rel="shortcut icon" href="/img/icons/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Soababio">
+  <meta name="application-name" content="Soababio">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
+  <meta name="theme-color" content="#00aba9">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -24,18 +38,22 @@
 </head>
 
 <body>
-  
-   <h3 class="site-headin text-cente text-white d-none d-lg-block m-2">
-    <span class="site-heading-lower"><img class="responsive mr-2 rounded" style="width: 150px; height: 80px;"  src="img/edit/logo~3.png" alt=""></span>
+
+  <h3 class="site-headin text-cente text-white d-none d-lg-block m-2">
+    <span class="site-heading-lower"><img class="responsive mr-2 rounded" style="width: 150px; height: 80px;"
+        src="img/edit/logo~3.png" alt=""></span>
     <span class="site-heading-lower text-primary mb-3">Spanish trained tiler with over 20 years of experience in tiling!
-    <a href="tel:+23324-505-2539">Call Us<i class="fa fa-phone text-white"></i></a> for estimate</span>
+      <a href="tel:+23324-505-2539">Call Us<i class="fa fa-phone text-white"></i></a> for estimate</span>
   </h3>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a aria-label="Soababio Logo" class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a aria-label="Soababio Logo" class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none"
+        href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;"
+          src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -65,19 +83,27 @@
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
-            <div id="about"  class="bg-faded rounded">
+            <div id="about" class="bg-faded rounded">
               <h2 class="section-heading mb-4">
                 <span class="section-heading-upper">Spanish Trained Tiler</span>
                 <span class="section-heading-lower">About Soababio</span>
               </h2>
-              <p class="text-justify"> Soababio Tiling is a professional tiling service of the highest quality. Fully experienced in all aspects of tiling, both internal and external tiling jobs; that is from preparation and fixing to cleaning and restoration.</p>
-<p class="text-justify">As the CEO of Soababio tiling, Samuel is a Spanish trained tiler with over 20 years of experience working as a tiler both in Spain and in the UK. Soababio tiling offers neat and clean services.</p> 
+              <p class="text-justify"> Soababio Tiling is a professional tiling service of the highest quality. Fully
+                experienced in all aspects of tiling, both internal and external tiling jobs; that is from preparation
+                and fixing to cleaning and restoration.</p>
+              <p class="text-justify">As the CEO of Soababio tiling, Samuel is a Spanish trained tiler with over 20
+                years of experience working as a tiler both in Spain and in the UK. Soababio tiling offers neat and
+                clean services.</p>
 
-<p class="text-justify">We specialise in all types of tiling, different materials ranging from porcelain, ceramic, granite, slate, natural stone, travertine, marble, mosaics etc.  fixing tiles on underfloor heating system, expert in working with ditramatt, decoupling or durabasere as well as grouting on old tiles and many more.</p>
-<p class="text-justify">We do offer services in price work, per meter square, day, and hours as well as pricing depending on the job.
-             You can contact us for free estimate and quotation now on: 079901713641</p>
+              <p class="text-justify">We specialise in all types of tiling, different materials ranging from porcelain,
+                ceramic, granite, slate, natural stone, travertine, marble, mosaics etc. fixing tiles on underfloor
+                heating system, expert in working with ditramatt, decoupling or durabasere as well as grouting on old
+                tiles and many more.</p>
+              <p class="text-justify">We do offer services in price work, per meter square, day, and hours as well as
+                pricing depending on the job.
+                You can contact us for free estimate and quotation now on: 079901713641</p>
 
-             
+
               <p class="mb-0 text-justify">We guarantee that you will fall in <em>love</em> with our work</p>
             </div>
           </div>
@@ -111,27 +137,35 @@
             </li>
           </ul>
         </div>
-         <div class="col-xs-6 col-sm-3">
-            <h5>Follow</h5>
-            <ul class="list-inline">
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Facebook"><i class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="WhatsApp"><i class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li> 
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Twitter"><i class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Intagram"><i class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
-            </ul>
-          </div>  
+        <div class="col-xs-6 col-sm-3">
+          <h5>Follow</h5>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Facebook"><i
+                  class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
+            <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="WhatsApp"><i
+                  class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li>
+            <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Twitter"><i
+                  class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
+            <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Intagram"><i
+                  class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
+          </ul>
+        </div>
       </div>
 
     </div>
 
-<hr class="bg-white">
-<!-- Footer -->
+    <hr class="bg-white">
+    <!-- Footer -->
     <div class="container">
-      <p class="m-0 small"> <script>document.write(new Date().getFullYear());</script> Copyright &copy; soababiotiling.com</p>
+      <p class="m-0 small">
+        <script>
+          document.write(new Date().getFullYear());
+        </script> Copyright &copy; soababiotiling.com
+      </p>
     </div>
-</footer>
- 
+  </footer>
 
+  <script src="js/main.js"></script>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
