--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
   <meta name="author" content="Soababio TIling Ltd">
 
   <title>Soababio Tiling Ltd</title>
-  <link rel="icon" href="img/soababiotiling/favicon.png" sizes="16x16" type="image/png"> 
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+  <link rel="manifest" href="/img/icons/site.webmanifest">
+  <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#00aba9">
+  <link rel="shortcut icon" href="/img/icons/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Soababio">
+  <meta name="application-name" content="Soababio">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
+  <meta name="theme-color" content="#00aba9">
+
   <link href="css/ionicons.min.css" rel="stylesheet">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -106,7 +118,7 @@
            
         <div class="intro-text left-0 text-center bg-faded p-2 py-4 rounded">
           <h3 class="section-heading mb-4">
-            <span class="section-heading-upper">Welcome</span>
+            <span class="section-heading-upper">Welcome To</span>
             <span class="section-heading-lower">Where Quality Talks</span>
           </h3>
           <p class="mb-3 text-justify p-3">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at <a href="gallery.html"><em>some of our works</em></a> - we guarantee you value for money!
@@ -187,6 +199,7 @@
     </div>
 </footer>
   
+  <script src="js/main.js"></script>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/all.min.js"></script>
