updated social links

--- a/offline.html
+++ b/offline.html
@@ -35,31 +35,34 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top py-lg-4" id="mainNav">
         <div class="container">
-          <a aria-label="Soababio Logo" class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item active px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="index.html">Home
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="gallery.html">Gallery</a>
-              </li>
-              <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
-              </li>
-              <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
-              </li>
-            </ul>
-          </div>
+            <a aria-label="Soababio Logo" class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none"
+                href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;"
+                    src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item active px-lg-4">
+                        <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item px-lg-4">
+                        <a class="nav-link text-uppercase text-expanded" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item px-lg-4">
+                        <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item px-lg-4">
+                        <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
-    
+    </nav>
+
     <div class="container">
         <h4 class="m-5 p-4 bg-white">Your are offline... please check your internet connection</h4>
     </div>
@@ -92,14 +95,18 @@
                 <div class="col-xs-6 col-sm-3">
                     <h5>Follow</h5>
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641"
-                                title="Facebook"><i class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
-                        <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641"
-                                title="WhatsApp"><i class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li>
-                        <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641"
-                                title="Twitter"><i class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
-                        <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641"
-                                title="Intagram"><i class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
+                        <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                                href="https://web.facebook.com/soababiotillingltd" title="Facebook"><i
+                                    class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
+                        <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                                href="https://wa.me/+447990713641" title="WhatsApp"><i
+                                    class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li>
+                        <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                                href="https://twitter.com/soababiotiler" title="Twitter"><i
+                                    class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
+                        <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                                href="https://www.instagram.com/soababio_tiling/" title="Intagram"><i
+                                    class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
                     </ul>
                 </div>
             </div>
