--- a/index.html
+++ b/index.html
@@ -182,12 +182,19 @@
          <div class="col-xs-6 col-sm-3">
             <h5>Follow</h5>
             <ul class="list-inline">
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Facebook"><i class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="WhatsApp"><i class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li> 
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Twitter"><i class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Intagram"><i class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
-            </ul>
-          </div>  
+              <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                      href="https://web.facebook.com/soababiotillingltd" title="Facebook"><i
+                          class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
+              <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                      href="https://wa.me/+447990713641" title="WhatsApp"><i
+                          class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li>
+              <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                      href="https://twitter.com/soababiotiler" title="Twitter"><i
+                          class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
+              <li class="list-inline-item"><a target="_blank" rel="nofollow"
+                      href="https://www.instagram.com/soababio_tiling/" title="Intagram"><i
+                          class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
+          </ul>
       </div>
 
     </div>
